# sia-root

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_cli.py
core_inference/: context_manager.py  model_loader.py  quantization_config.yaml
interface/: app.py
interface/components/: force_graph_3d.js
l0_alignment/: policy.py
l0_alignment/drift_detection/: fingerprint.json  psi_calculator.py
l0_alignment/nemo_config/: actions.py  config.yml  flows.co
memory_store/graph_rag/: community_detect.py  entity_extractor.py  neo4j_connector.py
memory_store/memgpt_lite/: memory_kernel.py
metacognition/causal_inference/: counterfactuals.py  scm_builder.py
metacognition/graph_of_thoughts/: node.py  planner.py  scoring.py  transformations.py
metacognition/visualization/: graph_export.py  layout_engine.py
orchestration/: respond.py  retrieval.py  state_graph.py  supervisor_agent.py
orchestration/sandbox_interface/: e2b_client.py
